Remove unchecked or deprecation warning messages