@@ -19,8 +19,6 @@ import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
 
-import junit.framework.TestCase;
-
 import org.seasar.doma.internal.jdbc.mock.MockConfig;
 import org.seasar.doma.jdbc.InParameter;
 import org.seasar.doma.jdbc.PreparedSql;
@@ -28,6 +26,7 @@ import org.seasar.doma.jdbc.SqlLogType;
 
 import example.entity.Emp;
 import example.entity._Emp;
+import junit.framework.TestCase;
 
 /**
  * @author taedium
@@ -69,7 +68,7 @@ public class AutoBatchInsertQueryTest extends TestCase {
         Emp emp2 = new Emp();
         emp2.setId(20);
         emp2.setSalary(new BigDecimal(2000));
-        emp2.setVersion(new Integer(10));
+        emp2.setVersion(Integer.valueOf(10));
 
         AutoBatchInsertQuery<Emp> query = new AutoBatchInsertQuery<Emp>(
                 _Emp.getSingletonInternal());
@@ -87,10 +86,10 @@ public class AutoBatchInsertQueryTest extends TestCase {
                 sql.getRawSql());
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(4, parameters.size());
-        assertEquals(new Integer(10), parameters.get(0).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(0).getWrapper().get());
         assertEquals("aaa", parameters.get(1).getWrapper().get());
         assertNull(parameters.get(2).getWrapper().get());
-        assertEquals(new Integer(1), parameters.get(3).getWrapper().get());
+        assertEquals(Integer.valueOf(1), parameters.get(3).getWrapper().get());
 
         sql = query.getSqls().get(1);
         assertEquals(
@@ -98,9 +97,9 @@ public class AutoBatchInsertQueryTest extends TestCase {
                 sql.getRawSql());
         parameters = sql.getParameters();
         assertEquals(4, parameters.size());
-        assertEquals(new Integer(20), parameters.get(0).getWrapper().get());
+        assertEquals(Integer.valueOf(20), parameters.get(0).getWrapper().get());
         assertNull(parameters.get(1).getWrapper().get());
         assertEquals(new BigDecimal(2000), parameters.get(2).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(3).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(3).getWrapper().get());
     }
 }
