@@ -17,8 +17,6 @@ package org.seasar.doma.jdbc.query;
 
 import java.util.List;
 
-import junit.framework.TestCase;
-
 import org.seasar.doma.internal.jdbc.mock.MockConfig;
 import org.seasar.doma.jdbc.InParameter;
 import org.seasar.doma.jdbc.PreparedSql;
@@ -26,6 +24,7 @@ import org.seasar.doma.jdbc.SqlLogType;
 
 import example.entity.Emp;
 import example.entity._Emp;
+import junit.framework.TestCase;
 
 /**
  * @author taedium
@@ -73,8 +72,9 @@ public class AutoDeleteQueryTest extends TestCase {
                 sql.getRawSql());
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(2, parameters.size());
-        assertEquals(new Integer(10), parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(0).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
     }
 
     public void testOption_ignoreVersion() throws Exception {
@@ -98,6 +98,6 @@ public class AutoDeleteQueryTest extends TestCase {
         assertEquals("delete from EMP where ID = ?", sql.getRawSql());
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(1, parameters.size());
-        assertEquals(new Integer(10), parameters.get(0).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(0).getWrapper().get());
     }
 }
