@@ -18,8 +18,6 @@ package org.seasar.doma.jdbc.query;
 import java.math.BigDecimal;
 import java.util.List;
 
-import junit.framework.TestCase;
-
 import org.seasar.doma.internal.jdbc.mock.MockConfig;
 import org.seasar.doma.jdbc.InParameter;
 import org.seasar.doma.jdbc.PreparedSql;
@@ -27,6 +25,7 @@ import org.seasar.doma.jdbc.SqlLogType;
 
 import example.entity.Emp;
 import example.entity._Emp;
+import junit.framework.TestCase;
 
 /**
  * @author taedium
@@ -81,9 +80,11 @@ public class AutoUpdateQueryTest extends TestCase {
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(4, parameters.size());
         assertEquals("aaa", parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(2).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(3).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(2).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(3).getWrapper().get());
     }
 
     public void testOption_excludeNull() throws Exception {
@@ -108,9 +109,11 @@ public class AutoUpdateQueryTest extends TestCase {
                 sql.getRawSql());
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(3, parameters.size());
-        assertEquals(new Integer(100), parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(1).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(2).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(0).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(2).getWrapper().get());
     }
 
     public void testOption_ignoreVersion() throws Exception {
@@ -137,8 +140,9 @@ public class AutoUpdateQueryTest extends TestCase {
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(3, parameters.size());
         assertEquals("aaa", parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(2).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(2).getWrapper().get());
     }
 
     public void testOption_include() throws Exception {
@@ -166,9 +170,11 @@ public class AutoUpdateQueryTest extends TestCase {
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(4, parameters.size());
         assertEquals("aaa", parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(2).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(3).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(2).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(3).getWrapper().get());
     }
 
     public void testOption_exclude() throws Exception {
@@ -196,9 +202,11 @@ public class AutoUpdateQueryTest extends TestCase {
         List<InParameter<?>> parameters = sql.getParameters();
         assertEquals(4, parameters.size());
         assertEquals(new BigDecimal(200), parameters.get(0).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
-        assertEquals(new Integer(10), parameters.get(2).getWrapper().get());
-        assertEquals(new Integer(100), parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
+        assertEquals(Integer.valueOf(10), parameters.get(2).getWrapper().get());
+        assertEquals(Integer.valueOf(100),
+                parameters.get(1).getWrapper().get());
     }
 
     public void testIsExecutable() throws Exception {
