@@ -29,7 +29,7 @@ public class ByteWrapperTest extends TestCase {
     public void testIncrement() {
         ByteWrapper wrapper = new ByteWrapper((byte) 10);
         wrapper.increment();
-        assertEquals(new Byte((byte) 11), wrapper.get());
+        assertEquals(Byte.valueOf((byte) 11), wrapper.get());
     }
 
     /**
@@ -38,6 +38,6 @@ public class ByteWrapperTest extends TestCase {
     public void testDecrement() {
         ByteWrapper wrapper = new ByteWrapper((byte) 10);
         wrapper.decrement();
-        assertEquals(new Byte((byte) 9), wrapper.get());
+        assertEquals(Byte.valueOf((byte) 9), wrapper.get());
     }
 }
