@@ -29,7 +29,7 @@ public class FloatWrapperTest extends TestCase {
     public void testIncrement() {
         FloatWrapper wrapper = new FloatWrapper(10f);
         wrapper.increment();
-        assertEquals(new Float(11f), wrapper.get());
+        assertEquals(Float.valueOf(11f), wrapper.get());
     }
 
     /**
@@ -38,6 +38,6 @@ public class FloatWrapperTest extends TestCase {
     public void testDecrement() {
         FloatWrapper wrapper = new FloatWrapper(10f);
         wrapper.decrement();
-        assertEquals(new Float(9f), wrapper.get());
+        assertEquals(Float.valueOf(9f), wrapper.get());
     }
 }
