@@ -29,7 +29,7 @@ public class LongWrapperTest extends TestCase {
     public void testIncrement() {
         LongWrapper wrapper = new LongWrapper(10L);
         wrapper.increment();
-        assertEquals(new Long(11L), wrapper.get());
+        assertEquals(Long.valueOf(11L), wrapper.get());
     }
 
     /**
@@ -38,6 +38,6 @@ public class LongWrapperTest extends TestCase {
     public void testDecrement() {
         LongWrapper wrapper = new LongWrapper(10L);
         wrapper.decrement();
-        assertEquals(new Long(9L), wrapper.get());
+        assertEquals(Long.valueOf(9L), wrapper.get());
     }
 }
